# libmarpa

./: .gdbinit  .gitignore  .travis.yml  ACKNOWLEDGEMENTS.md  HOWTO  INSTALL  INSTALL_NOTES  LICENSE  Makefile  R2test.sh  README  TOUCH  UPDATES.md  bump_version  fragment  fragment.txt  issue123.md  nits.old.out  toward.md  trivial1.old.out  trivial1.out.save
.github/workflows/: main.yml
aspell/: .gitignore  Makefile  libmarpa-api-ignore.source  libmarpa-api-ignore.txt
cmake/: .gitignore  ABOUT_ME  CMakeLists.txt  CMakeLists.txt.p20  CMakeLists.txt.p80  LIB_VERSION.cmake  Makefile  config.h.cmake  copier.list  libmarpa.pc.in  to_dist.pl
cmake/modules/: FindInline.cmake  FindNullIsZeroes.cmake  inline.c
cmake/tap_test/: .gitignore  TESTS.cm  do_tap_tests.sh  do_tap_tests.sh.in
cmake/tap_test/tests/: CMakeLists.txt
cmake/tap_test/tests/marpalua/: CMakeLists.txt  load.t  load.t.in
cmake/tap_test/tests/simple/: CMakeLists.txt
cmake/tap_test/tests/tap/: CMakeLists.txt
components/json/: dotiming.sh
etc/: .gitignore  README  copier.pl  cp_libmarpa.sh  indent.pro  license_check.pl  ts.pl  work_to_dist.sh  work_to_doc1_dist.sh  work_to_doc_dist.sh
etc/libmarpa/: License.pm
legal/: copyright_assignment_rns
lua/: .gitignore  Makefile  lua_src.list
lua/cmake/: Lua-config.cmake.in
lua/lua_orig/: ABOUT_ME
marpalua/cmake/: CMakeLists.txt
marpalua/etc/: hex2h.lua
marpalua/kollos/: do_miranda.sh  error_codes.table  events.table  gen_error_table.lua  gen_event_table.lua  gen_step_table.lua  kollos.h  kollos.md  kollos_hook.c  miranda  steps.table
marpalua/lib/: strict.lua
marpalua/src/: ABOUT_ME  lua.c  marpalua.c
notes/: ABOUT_ME  HOWTO
tars/: ABOUT_ME
test/: .gitignore  CMakeLists.txt  TESTS  json.c
test/json/: dotiming.sh  json.c  make_test_in.pl
test/rule1/: CMakeLists.txt  no_such_rule.c  output  rule1.c
test/simple/: CMakeLists.txt  depr_unvalued.c  issue92a.c  issue92b.c  issue92c.c  marpa_m_test.c  marpa_m_test.h  marpa_test.c  marpa_test.h  nits.c  rule1.c  trivial.c  trivial1.c
test/tap/: ABOUT.txt  CMakeLists.txt  basic.c  basic.h  float.c  float.h  runtests.c
timestamp/: ABOUT_ME
work/: .gitignore  Makefile
work/ac/: .gitignore  ABOUT_ME  Makefile  Makefile.am  configure.ac  configure.ac.p20  configure.ac.p80  copier.list
work/ac_doc/: .gitignore  ABOUT_ME  Makefile  Makefile.am  README  configure.ac  configure.ac.p80  copier.list
work/ac_doc1/: ABOUT_ME  Makefile  Makefile.am  README  configure.ac  configure.ac.p80  copier.list
work/ami/: Makefile  api.texi  internal.texi  marpa_ami.w  w2private_h.pl
work/avl/: marpa_avl.h
work/cmake/: CMakeLists.txt
work/dev/: .gitignore  Makefile  api.premenu  api.texi  internal.premenu  internal.texi  legacy.w  marpa.w  w2private_h.pl
work/etc/: .gitignore  ABOUT_ME  GIT_LOG.txt
work/obs/: marpa_obs.h
work/public/: README  (+10 more)
work/test/dev/: Makefile.am  balanced.c  configure.ac  testleak.c
work/test/tap/c-tap-harness/: .clang-format  .gitignore  LICENSE  Makefile.am  NEWS  README  README.md  TODO  bootstrap  configure.ac
work/test/tap/c-tap-harness/.github/workflows/: build.yaml
work/test/tap/c-tap-harness/ci/: README  install  test
work/test/tap/c-tap-harness/docs/: docknot.yaml  runtests.pod
work/test/tap/c-tap-harness/docs/api/: bail.pod  bcalloc_type.pod  bmalloc.pod  breallocarray.pod  diag.pod  diag_file_add.pod  is_int.pod  ok.pod  plan.pod  skip.pod  skip_all.pod  test_cleanup_register.pod  test_file_path.pod  test_tmpdir.pod
work/test/tap/c-tap-harness/m4/: cc-flags.m4
work/test/tap/c-tap-harness/tests/: TESTS
work/test/tap/c-tap-harness/tests/data/: cppcheck.supp  perl.conf
work/test/tap/c-tap-harness/tests/docs/: spdx-license-t
work/test/tap/c-tap-harness/tests/harness/: basic-t  env-t  multiple-t  options-t  search-t.in  single-t  verbose-t
work/test/tap/c-tap-harness/tests/harness/basic/: abort-one.list  abort-one.output  abort.list  abort.output  abort.t  badnum-delay.t  badnum.t  bail-silent.t  bail.t  duplicate.t  empty.list  empty.output  fail-count.t  fail.list  fail.output  fail.t  hup.t  missing.t  nocount.t  order.t  pass.list  pass.output  pass.t  plan-last.t  plan-long.t  plan-middle.t  plan-order.t  plan-twice.t  segv.t  skip-all-case.t  skip-all-late.t  skip-all-quiet.t  skip-all.t  skip.list  skip.output  skip.t  status.t  todo.t  too-many.t  zero.t
work/test/tap/c-tap-harness/tests/harness/env/: env.output  env.t.in
work/test/tap/c-tap-harness/tests/harness/multiple/: output
work/test/tap/c-tap-harness/tests/harness/options/: bad-option.list  bad-option.output  executable.t  libtool  no-valgrind.output  simple.t  valgrind  valgrind-fail.output  valgrind.list  valgrind.output
work/test/tap/c-tap-harness/tests/harness/search/: search.list  search.output
work/test/tap/c-tap-harness/tests/harness/single/: test.output  test.t
work/test/tap/c-tap-harness/tests/harness/verbose/: list.output  multiple.output
work/test/tap/c-tap-harness/tests/libtap/: basic-t  cleanup-t
work/test/tap/c-tap-harness/tests/libtap/basic/: c-bail.c  c-bail.output  c-basic.c  c-basic.output  c-bstrndup.c  c-bstrndup.output  c-diag-file.c  c-diag-file.output  c-diag.c  c-extra-one.c  c-extra.c  c-extra.output  c-file.c  c-lazy.c  c-lazy.output  c-missing-one.c  c-missing.c  c-missing.output  c-skip-reason.c  c-skip-reason.output  c-skip.c  c-skip.output  c-success-one.c  c-success.c  c-sysbail.c  c-tmpdir.c  sh-bail  sh-bail.output  sh-basic  sh-basic.output  sh-diag  sh-diag.output  sh-extra  sh-extra-one  sh-extra-one.output  sh-file  sh-lazy  sh-missing  sh-missing-one  sh-missing-one.output  (+9 more)
work/test/tap/c-tap-harness/tests/libtap/cleanup/: c-bail-lazy.c  c-bail-lazy.output  c-bail.c  c-bail.output  c-fork.c  c-fork.output  c-lazy.c  c-lazy.output  c-many-fail.c  c-many-fail.output  c-many.c  c-many.output  c-one-fail.c  c-one-fail.output  c-one-with-data.c  c-one-with-data.output  c-one.c  c-one.output
work/test/tap/c-tap-harness/tests/tap/perl/Test/: RRA.pm
work/test/tap/c-tap-harness/tests/tap/perl/Test/RRA/: Automake.pm  Config.pm
(+21 files in other folders)
